Add ActionOnTargetDeathPower